# apollo-router-to-kurrentdb-connector

./: Cargo.toml  README.md  docker-compose.yml  router.yaml  supergraph-schema.graphql
src/: main.rs
src/plugins/: mod.rs  mutation_plugin.rs
src/plugins/kurrent_mapper/: mapper.rs  mod.rs
subgraphs/loan-decisions/: index.mjs  package-lock.json  package.json
subgraphs/loan-origination/: index.mjs  package-lock.json  package.json
target-domain-schemas/: AutomatedSummary.json  CreditChecked.schema.json  LoanApprovalNeeded.schema.json  LoanAutomaticallyApproved.schema.json  LoanAutomaticallyDenied.schema.json  LoanManuallyApproved.schema.json  LoanManuallyDenied.schema.json  LoanRequested.v2.schema.json  Metadata.schema.json
